javali_tests/A3/A4_keinestamSchmid/fail/Error.2.3.22.INVALIDRETURN.3.javali
// Test Check valid returntype
// rule 2.3.22


class Main {
	float i;
	
	float m(){
		return 5;
	}
	
	void main() {
		i = m();

	}
}